--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
   },
   "homepage": "https://github.com/flawless2011/node-water-sensor#readme",
   "engines": {
-    "node": "6.10.1"
+    "node": "^12.0.0"
   }
 }
